# dydx

./: .gitignore  README.md  dev.ipynb  requirements.txt  zensical.toml
dydx/: README.md  pyproject.toml
dydx/src/dydx/: __init__.py
dydx/src/dydx/core/: __init__.pyi  util.py  validation.py
dydx/src/dydx/core/http/: client.py
dydx/src/dydx/core/types/: __init__.pyi  enums.py  market.py  misc.py  order.py  positions.py
dydx/src/dydx/core/ws/: base.py  multiplex_streams_rpc.py  serial_rpc.py  streams_rpc.py
dydx/src/dydx/indexer/: __init__.pyi  _indexer.py
dydx/src/dydx/indexer/data/: __init__.pyi  _data.py  core.py  get_candles.py  get_fills.py  get_funding_payments.py  get_historical_funding.py  get_markets.py  get_order.py  get_order_book.py  get_subaccounts.py  get_trades.py  list_orders.py  list_positions.py
dydx/src/dydx/indexer/streams/: __init__.pyi  _streams.py  core.py  subaccounts.py
dydx/src/dydx/node/: __init__.pyi
dydx/src/dydx/node/private/: __init__.pyi  _private.py  cancel_order.py  core.py  place_order.py
dydx/src/dydx/sdk/core/: __init__.pyi  exc.py  mixins.py
dydx/src/dydx/sdk/market/: __init__.pyi
pkg/: pyproject.toml
pkg/src/dydx/: __init__.pyi  main.py
pkg/src/dydx/core/: __init__.pyi  constants.py  exc.py  util.py
pkg/src/dydx/core/ws/: __init__.pyi  base.py  multiplex_rpc.py  streams_rpc.py
pkg/src/dydx/indexer/: __init__.py
pkg/src/dydx/indexer/data/: __init__.py  core.py  get_candles.py  get_candles_paged.py  get_fills.py  get_fills_paged.py  get_funding_payments.py  get_funding_payments_paged.py  get_historical_funding.py  get_historical_funding_paged.py  get_market.py  get_markets.py  get_open_position.py  get_order.py  get_order_book.py  get_subaccount.py  get_subaccounts.py  get_trades.py  get_transfers.py  get_transfers_paged.py  list_orders.py  list_positions.py
pkg/src/dydx/indexer/streams/: __init__.py  candles.py  core.py  parent_subaccounts.py  subaccounts.py
pkg/src/dydx/indexer/types/: __init__.pyi  market.py  (+3 more)
pkg/src/dydx/node/: __init__.py  core.py
pkg/src/typed_dydx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+91 files in other folders)
