[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dydx-trading-sdk"
version = "0.1.0"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "The unofficial, actually good, fully-typed async Python SDK for dYdX v4, by Tribulnation."
dependencies = [
  "lazy-loader"
  "httpx",
  "websockets",
  "v4-proto",
  "dydx-v4-client",
  "pydantic",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/tribulnation/dydx.git"
