[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typed-dydx"
version = "0.3.0"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "A fully typed, validated async client for the dYdX API."
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "lazy-loader", "httpx", "websockets", "pydantic", "orjson",
  "v4-proto", "dydx-v4-client",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
Repository = "https://github.com/tribulnation/dydx.git"
Documentation = "https://dydx.tribulnation.com"
Website = "https://tribulnation.com"
